[package]
name = "elden_runes"
description = "Tells you the optimal rune items to use to reach your desired amount in Elden Ring"
version = "0.2.3"
edition = "2021"
rust-version = "1.59"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/elden_runes"

[dependencies]
anyhow = "1.0"
argh = "0.1"

[dependencies.comfy-table]
# MSRV 1.59
version = "=6.0.0-rc.1"
default-features = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
