[package]
name = "elden_runes"
description = "Tells you the optimal rune items to use to reach your desired amount in Elden Ring"
version = "0.2.4"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/elden_runes"

[dependencies]
anyhow = "1.0"
argh = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dependencies.comfy-table]
version = "7"
default-features = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
overflow-checks = true
